--- a/back/vercel.json
+++ b/back/vercel.json
@@ -1,9 +1,10 @@
 {
-    "version" : 2,
-    "builds"  : [ { "src" : "index.js"  , "use" : "@vercel/node" } ],
-    "routes"  : [
-        {   "handle": "filesystem" },
-         { "src" : "/(.*)"     , "dest": "index.js"     } 
-        
-        ]
-}
+    "version": 2,
+    "builds": [{ "src": "api/index.js", "use": "@vercel/node" }],
+    "routes": [
+      { "handle": "filesystem" },
+      { "src": "/images/(.*)", "dest": "/public/images/$1" },
+      { "src": "/(.*)", "dest": "/api/index.js" }
+    ]
+  }
+  
