--- a/back/vercel.json
+++ b/back/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "builds": [{ "src": "api/index.js", "use": "@vercel/node" }],
   "routes": [
+    { "handle": "filesystem" },
     { "src": "/images/(.*)", "dest": "/public/images/$1" },
     { "src": "/(.*)", "dest": "/api/index.js" }
   ]
