--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
-  "builds": [{ "src": "/index.js", "use": "@vercel/node" }],
+  "builds": [{ "src": "api/index.js", "use": "@vercel/node" }],
   "routes": [
     { "handle": "filesystem" },
     { "src": "/images/(.*)", "dest": "/public/images/$1" },
-    { "src": "/(.*)", "dest": "/index.js" }
+    { "src": "/(.*)", "dest": "/api/index.js" }
   ]
 }
