--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
   "builds": [{ "src": "api/index.js", "use": "@vercel/node" }],
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/images/(.*)", "dest": "/public/images/$1" },
-    { "src": "/(.*)", "dest": "/api/index.js" }
+    { "src": "/images/(.*)", "dest": "/public/images/" },
+    { "src": "/api/(.*)", "dest": "/api/index.js" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
