--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 {
   "version": 2,
-  "builds": [{ "src": "api/index.js", "use": "@vercel/node" }],
+  "builds": [
+    { "src": "api/index.js", "use": "@vercel/node" },
+    { "src": "build/**", "use": "@vercel/static" }
+  ],
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/images/(.*)", "dest": "/public/images/" },
     { "src": "/api/(.*)", "dest": "/api/index.js" },
+    { "src": "/images/(.*)", "dest": "/public/images/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
