--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,8 @@
     { "src": "/api/(.*)", "dest": "/api/index.js" },
     { "src": "/images/(.*)", "dest": "/public/images/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
+  ],
+  "rewrites": [
+    {"source": "/(.*)", "destination": "/"}
   ]
 }
