--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,9 @@
   "routes": [
     { "handle": "filesystem" },
     { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/images/(.*)", "dest": "/public/images/$1" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/images/(.*)", "dest": "/public/images/$1" }
   ],
   "rewrites": [
-    {"source": "/(.*)", "destination": "/"}
+    { "source": "/(.*)", "destination": "/build/index.html" }
   ]
 }
