--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,6 @@
   "routes": [
     { "handle": "filesystem" },
     { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/images/(.*)", "dest": "/public/images/$1" }
-  ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/build/index.html" }
+    { "src": "/(.*)", "dest": "/build/index.html" }
   ]
 }
