--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
   "routes": [
     { "handle": "filesystem" },
     { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/(.*)", "dest": "/build/index.html" }
+    { "src": "/images/(.*)", "dest": "/public/images/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
+  ],
+  "rewrites": [
+    {"source": "/(.*)", "destination": "/"}
   ]
 }
