--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,9 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
-  ],
+  "builds": [{ "src": "api/index.js", "use": "@vercel/node" }],
   "routes": [
-    {
-      "src": "/public/(.*)",
-      "dest": "/public/images"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "index.js"
-    }
+    { "handle": "filesystem" },
+    { "src": "/images/(.*)", "dest": "/public/images/$1" },
+    { "src": "/(.*)", "dest": "/api/index.js" }
   ]
 }
