--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 FULL_DOMAIN_1=http://localhost:3027
 
+PORT=3027
+
 MONGODB_URI=mongodb+srv://jesusparfer:UVvU8gK8JqTgsmuF@cluster-start.m3g6m.mongodb.net/jundium?retryWrites=true&w=majority&appName=Cluster-start
 
-JWT_SECRET=S3jIRHqtt
+JWT_SECRET=S16jIRHqtt
